fdo#75492: table names can start the same way and still be different

Change-Id: Icc5a6fb7cf3ed3c2171e628d22918af7038f8127